--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "private": true,
+  "name": "daria-retouch-app",
+  "version": "0.0.2",
   "scripts": {
-    "lint": "eslint *.js src/**/*.js && stylelint src/**/*.css",
-    "test": "yarn lint & yarn build && yarn spell",
-    "clean": "rimraf dist/",
-    "start": "parcel serve src/index.pug --open",
-    "build": "yarn clean && parcel build src/index.pug"
+    "build": "rollup --compact -c",
+    "dev": "rollup -c -w",
+    "start": "sirv public"
   },
-  "browserslist": [
-    "last 2 versions",
-    "not dead",
-    "not ie 11",
-    "not ie_mob 11",
-    "not op_mini all",
-    "not op_mob > 0",
-    "not and_qq > 0",
-    "not android > 0"
-  ],
+  "devDependencies": {
+    "@babel/core": "^7.10.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/preset-env": "^7.10.4",
+    "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
+    "postcss-load-config": "^2.1.0",
+    "rollup": "^2.3.4",
+    "rollup-plugin-html": "^0.2.1",
+    "rollup-plugin-livereload": "^1.0.0",
+    "rollup-plugin-svelte": "^5.0.3",
+    "rollup-plugin-terser": "^5.1.2",
+    "sass": "^1.26.10",
+    "svelte": "^3.0.0",
+    "postcss": "^7.0.32"
+  },
+  "dependencies": {
+    "node-sass": "^4.14.1",
+    "sirv-cli": "^1.0.0",
+    "svelte-preprocess": "^4.0.8"
+  },
   "postcss": {
     "plugins": {
       "postcss-media-minmax": {},
@@ -34,83 +44,5 @@
       },
       "autoprefixer": {}
     }
-  },
-  "staticPath": "public",
-  "engines": {
-    "node": "^11.0.0"
-  },
-  "browser": {
-    "node_modules/three/src/renderers/webvr/*": "./empty.js"
-  },
-  "eslintConfig": {
-    "env": {
-      "browser": true
-    },
-    "rules": {
-      "security/detect-non-literal-regexp": "off",
-      "security/detect-unsafe-regex": "off",
-      "node/no-unpublished-require": "off"
-    }
-  },
-  "stylelint": {
-    "extends": [
-      "stylelint-config-standard",
-      "stylelint-config-recess-order"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": "eslint --fix",
-    "*.css": [
-      "stylelint --fix",
-      "git add"
-    ],
-    "*.svg": [
-      "svgo",
-      "git add"
-    ]
-  },
-  "devDependencies": {
-    "@logux/eslint-config": "^28.0.0",
-    "autoprefixer": "^9.5.0",
-    "chalk": "^2.4.2",
-    "css-mqpacker": "^7.0.0",
-    "eslint": "^5.16.0",
-    "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-import-helpers": "^0.1.4",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-prefer-let": "^1.0.1",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-security": "^1.4.0",
-    "eslint-plugin-standard": "^4.0.0",
-    "fast-xml-parser": "^3.12.16",
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
-    "parcel-bundler": "^1.12.3",
-    "parcel-plugin-static-files-copy": "^2.0.0",
-    "postcss": "^7.0.14",
-    "postcss-hexrgba": "^1.0.1",
-    "postcss-media-minmax": "^4.0.0",
-    "postcss-nested": "^4.1.2",
-    "postcss-pxtorem": "^4.0.1",
-    "postcss-custom-properties": "^8.0.10",
-    "postcss-mixins": "^6.2.1",
-    "postcss-modules": "^1.4.1",
-    "posthtml": "^0.11.3",
-    "pug": "^2.0.3",
-    "sass": "^1.17.4",
-    "strip-debug": "^4.0.0",
-    "stylelint": "^9.10.1",
-    "stylelint-config-recess-order": "^2.0.1",
-    "stylelint-config-standard": "^18.2.0",
-    "stylelint-order": "^2.1.0",
-    "svgo": "^1.2.0",
-    "yaspeller": "^5.0.1"
   }
 }
